--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -46,7 +46,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand">
             小山屋论坛</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
