--- a/src/main/resources/templates/mainpage/defaultandzero.html
+++ b/src/main/resources/templates/mainpage/defaultandzero.html
@@ -65,7 +65,7 @@
 <body id="mainbody">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/ind/userindex">
             小山屋论坛</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,12 +73,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
+                    <a class="nav-link active" aria-current="page" href="/bottle/tobottleindex"><span class="bi-balloon-heart"></span>
                         漂流瓶</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-chat-left-quote"></span>
-                        风纪委员会</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/article/toarticleup"><span class="bi-chat-left-quote"></span>
@@ -256,7 +252,32 @@
             </nav>
         </div>
         <div class="col-sm-4">
-
+            <div class="mdui-card mdui-hoverable" id="maincard-right1">
+                <div class="mdui-card-header">
+                    <i class="mdui-icon material-icons mdui-card-header-avatar">event_note</i>
+                    <div class="mdui-card-header-title">公告</div>
+                    <div class="mdui-card-header-subtitle">小山屋论坛</div>
+                </div>
+                <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
+                <div class="mdui-card-media">
+                    <img src="https://s3.bmp.ovh/imgs/2022/03/07ca2075685f0fd8.png"/>
+                    <!-- 卡片中可以包含一个或多个菜单按钮 -->
+                    <div class="mdui-card-menu">
+                        <button class="mdui-btn mdui-btn-icon mdui-text-color-white">
+                            <i class="mdui-icon material-icons">arrow_forward</i>
+                        </button>
+                    </div>
+                    <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
+                        <!-- 卡片的标题和副标题 -->
+                        <div class="mdui-card-primary">
+                            <div class="mdui-card-primary-title" th:text="${board.getBoardtitle()}">公告标题</div>
+                            <div class="mdui-card-primary-subtitle" th:text="${board.getBoardThemeNameImpl()}">分区</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 卡片的内容 -->
+                <div class="mdui-card-content" th:text="${board.getBoardDateStringImpl()}">发布日期</div>
+            </div>
         </div>
     </div>
 </div>
