--- a/src/main/resources/templates/user/usercollect.html
+++ b/src/main/resources/templates/user/usercollect.html
@@ -46,7 +46,7 @@
 <body>
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/ind/userindex">
             小山屋论坛</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,12 +54,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
+                    <a class="nav-link active" aria-current="page" href="/bottle/tobottleindex"><span class="bi-balloon-heart"></span>
                         漂流瓶</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-chat-left-quote"></span>
-                        风纪委员会</a>
                 </li>
             </ul>
 
