--- a/src/main/resources/templates/user/utheme/usertheme.html
+++ b/src/main/resources/templates/user/utheme/usertheme.html
@@ -77,7 +77,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
+                    <a class="nav-link active" aria-current="page" href="/bottle/tobottleindex"><span class="bi-balloon-heart"></span>
                         漂流瓶</a>
                 </li>
             </ul>
