--- a/src/main/resources/templates/article/articlemain.html
+++ b/src/main/resources/templates/article/articlemain.html
@@ -163,6 +163,39 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="reportArticleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div id="reportArticleModalSpecial" class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="reportArticleLabel">举报这篇文章</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">举报类别：</label>
+                        <select id="reportreason1" class="form-select" aria-label="Default select example" v-model="rreason1">
+                            <option value="贴子内包含低俗不雅的色情图片、露骨文字描述等。">色情低俗</option>
+                            <option value="贴子内容是与吧主题不相符的广告，影响我的浏览。">垃圾广告</option>
+                            <option value="贴子内有恶意辱骂等人身攻击内容。">辱骂攻击</option>
+                            <option value="贴子内包含违反国家法律和贴吧协议的内容，例如非法枪支买卖、删贴服务、发贴机服务等。">涉嫌违法犯罪</option>
+                            <option value="贴子内包含与时政不符或敏感信息等内容。">时政信息不实</option>
+                            <option value="0">其他违规信息</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message-text" class="col-form-label">详细理由：</label>
+                        <textarea class="form-control" id="reportreason2" v-model="rreason2"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary" th:@click="|reportArticle(${article.getArticleid()})|">提交举报</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
@@ -296,10 +329,13 @@
                 </div>
                 <div class="card-body" id="caozuo">
                     <button class="btn btn-danger" th:@click="|zan(${article.getArticleid()})|">
-                        <span class="bi-hand-thumbs-up"></span>点赞
+                        <span class="bi-hand-thumbs-up"></span>给文章点赞
                     </button>
                     <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#collectModal">
-                        <span class="bi-star"></span>收藏
+                        <span class="bi-star"></span>收藏这篇文章
+                    </button>
+                    <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#reportArticleModal">
+                        <span class="bi-exclamation-circle"></span>举报
                     </button>
                 </div>
             </div>
@@ -416,6 +452,7 @@
         },
         methods:{
             zan:function (aid){
+
                 //封装表单参数
                 const formDate=new FormData();
                 formDate.append("articleid",aid);
@@ -453,6 +490,48 @@
 
                 axios
                     .post('http://localhost:8080/comment/addcomment',formDate)
+                    .then(response =>{
+                        if(response.data.result){
+                            alert(response.data.resMsg)
+                            location.reload()
+                        }else{
+                            alert(response.data.errMsg)
+                        }
+                    })
+                    .catch(function (error) { // 请求失败处理
+                        console.log(error);
+                    });
+            }
+        }
+    })
+
+    new Vue({
+        el:"#reportArticleModalSpecial",
+        data:{
+            rreason1:"",
+            rreason2:"",
+            errMsg:"",
+            resMsg:""
+        },
+        methods:{
+            reportArticle:function (arid){
+
+                //封装表单参数
+                const formDate=new FormData();
+                formDate.append("reporttoid",arid);
+
+                if(this.rreason1 !== "0"){
+                    formDate.append("reportreason",this.rreason1);
+                }else {
+                    formDate.append("reportreason",this.rreason2);
+                }
+
+                // formDate.append("reportreason","理由：" + data.rreason1 + data.rreason2);
+
+                formDate.append("reporttype","0");
+
+                axios
+                    .post('http://localhost:8080/rep/addreport',formDate)
                     .then(response =>{
                         if(response.data.result){
                             alert(response.data.resMsg)
