--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -77,7 +77,8 @@
     <div class="col-3">
         <h3>论坛管理</h3>
         <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action active">
+            <button type="button" class="list-group-item list-group-item-action active"
+                    onclick="window.location.href='http://localhost:8080/ind/adminindex'">
                 <span class="bi-bar-chart"></span>   今日论坛数据
             </button>
             <button type="button" class="list-group-item list-group-item-action"
