--- a/src/main/resources/templates/user/userreports.html
+++ b/src/main/resources/templates/user/userreports.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>小山屋论坛-用户管理</title>
+    <title>小山屋论坛-举报管理</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
@@ -118,7 +118,7 @@
         <div class="col-3">
             <h3>我的</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
+                <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tousercenter'">
                     <span class="bi-journal-check"></span> 我的数据</button>
                 <button type="button" class="list-group-item list-group-item-action"
@@ -147,106 +147,24 @@
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-bell"></span> 我的通知</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action active">
                     <span class="bi-exclamation-circle"></span> 我的举报</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-question-lg"></span> 我的反馈</button>
             </div>
         </div>
-        <div class="col-9">
-            <h1><span class="bi-journal-check"></span> 我的数据</h1>
-            <div class="row">
-                <div class="col-sm-4">
-                    <h5 th:text="'文章总数：' + ${articlenum}"></h5>
-                    <div id="articletopicchart" style="width: 600px;height:400px;"></div>
-                    <input type="hidden" th:value="${theme01}" id="theme01">
-                    <input type="hidden" th:value="${theme0}" id="theme0">
-                    <input type="hidden" th:value="${theme1}" id="theme1">
-                    <input type="hidden" th:value="${theme2}" id="theme2">
-                    <input type="hidden" th:value="${theme3}" id="theme3">
-                    <input type="hidden" th:value="${theme4}" id="theme4">
-                    <input type="hidden" th:value="${themeo}" id="themeo">
-                </div>
 
-                <div class="col-sm-4">
-                    <h5>论坛足迹</h5>
-                    <div id="allsendchart" style="width: 600px;height:400px;"></div>
-                    <input type="hidden" th:value="${articlec}" id="arc">
-                    <input type="hidden" th:value="${commentc}" id="cmc">
-                    <input type="hidden" th:value="${driftc}" id="dc">
-                </div>
-            </div>
+    </div>
+
+    <footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
+        <div class="container">
+            <ul class="bd-footer-links ps-0 mb-3">
+                <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
+            </ul>
+            <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
+            <p class="mb-0">当前版本 v0.1。</p>
         </div>
-    </div>
-
-<footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
-    <div class="container">
-        <ul class="bd-footer-links ps-0 mb-3">
-            <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
-        </ul>
-        <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
-        <p class="mb-0">当前版本 v0.1。</p>
-    </div>
-</footer>
+    </footer>
 </div>
 </body>
 </html>
-<script type="text/javascript">
-    // 基于准备好的dom，初始化echarts实例
-    var articleThemeChart = echarts.init(document.getElementById('articletopicchart'));
-
-    var theme01=$("#theme01").val();
-    var theme0=$("#theme0").val();
-    var theme1=$("#theme1").val();
-    var theme2=$("#theme2").val();
-    var theme3=$("#theme3").val();
-    var theme4=$("#theme4").val();
-    var themeo=$("#themeo").val();
-
-    // 指定图表的配置项和数据
-    var articleThemeoption = {
-        series : [
-            {
-                name: '访问来源',
-                type: 'pie',
-                data:[
-                    {value:theme01, name:'管理区'},
-                    {value:theme0, name:'编程'},
-                    {value:theme1, name:'求职招聘'},
-                    {value:theme2, name:'动漫'},
-                    {value:theme3, name:'游戏'},
-                    {value:theme4, name:'文学'},
-                    {value:themeo, name:'其他'},
-                ],
-                radius: ['40%', '70%']
-            }
-        ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    articleThemeChart.setOption(articleThemeoption);
-</script>
-<script type="text/javascript">
-    var allSendChart = echarts.init(document.getElementById('allsendchart'));
-
-    var arca=$("#arc").val();
-    var cmcc=$("#cmc").val();
-    var dcd=$("#dc").val();
-
-    var allSendOption = {
-        series: [
-            {
-                name: '论坛足迹',
-                type: 'pie',
-                data:[
-                    {value:arca, name:'帖子'},
-                    {value:cmcc, name:'评论'},
-                    {value:dcd, name:'漂流瓶'}
-                ],
-                radius: ['40%', '70%']
-            }
-        ]
-    };
-
-    allSendChart.setOption(allSendOption)
-</script>
