热度功能初步添加

--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -87,7 +87,8 @@
             <button type="button" class="list-group-item list-group-item-action"
                     onclick="window.location.href='http://localhost:8080/adm/allthemes'">
                 <span class="bi-back"></span>   主题管理</button>
-            <button type="button" class="list-group-item list-group-item-action">
+            <button type="button" class="list-group-item list-group-item-action"
+                    onclick="window.location.href='http://localhost:8080/adm/articlesmng'">
                 <span class="bi-card-text"></span>   帖子管理</button>
             <button type="button" class="list-group-item list-group-item-action"
                     onclick="window.location.href='http://localhost:8080/adm/tochangepwd'">
