--- a/src/main/resources/templates/user/usercollect.html
+++ b/src/main/resources/templates/user/usercollect.html
@@ -141,7 +141,8 @@
             </div>
         </div>
         <div class="col-9">
-            <h1><span class="bi-card-text"></span> 我的帖子</h1>
+            <h1><span class="bi-star"></span> 我的收藏
+            </h1>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
                     <a class="nav-link active">全部收藏</a>
