--- a/src/main/resources/templates/user/userchangepwdpage.html
+++ b/src/main/resources/templates/user/userchangepwdpage.html
@@ -120,7 +120,8 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/userallarticle'">
                     <span class="bi-card-text"></span> 我的帖子</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tousertheme'">
                     <span class="bi-back"></span> 我的主题</button>
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/usercollects'">
@@ -137,6 +138,13 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tochangeemail'">
                     <span class="bi-at"></span> 修改邮箱</button>
+
+            </div>
+            <h3>其他</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/allreports'">
+                    <span class="bi-exclamation-circle"></span> 我的举报</button>
             </div>
         </div>
         <div class="col-9">
