--- a/src/main/resources/templates/user/utheme/uthemenull.html
+++ b/src/main/resources/templates/user/utheme/uthemenull.html
@@ -143,6 +143,12 @@
                         onclick="window.location.href='/user/tochangeemail'">
                     <span class="bi-at"></span> 修改邮箱</button>
             </div>
+            <h3>其他</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/allreports'">
+                    <span class="bi-exclamation-circle"></span> 我的举报</button>
+            </div>
         </div>
         <div class="col-9">
             <h1><span class="bi-back"></span> 我的主题</h1>
