去掉管理员页无用标签，修复大量跳转bug

--- a/src/main/resources/templates/admin/adminchangepwd.html
+++ b/src/main/resources/templates/admin/adminchangepwd.html
@@ -86,8 +86,9 @@
                     <span class="bi-person-video2"></span>   用户管理</button>
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/allthemes'">
-                    <span class="bi-back"></span>  主题管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                    <span class="bi-back"></span>   主题管理</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/articlesmng'">
                     <span class="bi-card-text"></span>   帖子管理</button>
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='http://localhost:8080/adm/tochangepwd'">
@@ -99,23 +100,15 @@
                         onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
                 <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-currency-exchange"></span>   财产变更记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-activity"></span>   热度操作记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-arrow-down-up"></span>   经验扣除记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-cone-striped"></span>   黑名单</button>
             </div>
             <h3>其他</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-bell"></span>   通知管理</button>
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
                 <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-person-rolodex"></span>   反馈管理</button>
+                    <span class="bi-emoji-frown"></span>   举报管理</button>
             </div>
         </div>
         <div class="col-9">
