--- a/src/main/resources/templates/admin/article/adminarticlesmng.html
+++ b/src/main/resources/templates/admin/article/adminarticlesmng.html
@@ -77,7 +77,8 @@
         <div class="col-3">
             <h3>论坛管理</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/ind/adminindex'">
                     <span class="bi-bar-chart"></span>   今日论坛数据
                 </button>
                 <button type="button" class="list-group-item list-group-item-action"
@@ -99,23 +100,15 @@
                         onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
                 <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-currency-exchange"></span>   财产变更记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-activity"></span>   热度操作记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-arrow-down-up"></span>   经验扣除记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-cone-striped"></span>   黑名单</button>
             </div>
             <h3>其他</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-bell"></span>   通知管理</button>
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
                 <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-person-rolodex"></span>   反馈管理</button>
+                    <span class="bi-emoji-frown"></span>   举报管理</button>
             </div>
         </div>
         <div class="col-9">
@@ -131,7 +124,7 @@
             </ul>
             <button type="button" class="btn btn-info"
                     onclick="window.location.href='http://localhost:8080/adm/refreshhot'">
-                刷新热度
+                刷新帖子与评论热度
             </button>
         </div>
     </div>
