完善举报系统，热度计算系统

--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -107,7 +107,8 @@
             <button type="button" class="list-group-item list-group-item-action"
                     onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                 <span class="bi-clipboard"></span>   公告管理</button>
-            <button type="button" class="list-group-item list-group-item-action">
+            <button type="button" class="list-group-item list-group-item-action"
+                    onclick="window.location.href='http://localhost:8080/adm/allreports'">
                 <span class="bi-emoji-frown"></span>   举报管理</button>
         </div>
     </div>
