完善举报系统，热度计算系统

--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -113,6 +113,19 @@
         </div>
     </div>
     <div class="col-9">
+        <div class="row">
+            <div class="col-sm-6">
+                <h1><span class="bi-bar-chart"></span>   今日论坛数据</h1>
+            </div>
+        </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active">用户数据</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">帖子数据</a>
+            </li>
+        </ul>
 
     </div>
 </div>
