--- a/src/main/resources/templates/admin/hot/hotmng.html
+++ b/src/main/resources/templates/admin/hot/hotmng.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>小山屋论坛-控制台</title>
+    <title>小山屋论坛-帖子管理</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--  popper.min.js 用于弹窗、提示、下拉菜单 -->
+    <!--<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>-->
 
     <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
     <!--  vue.js  -->
-    <script src="../js/vue.js"></script>
+    <script src="js/vue.js"></script>
 
     <!--  bootstrap5 图标库-->
-    <link rel="stylesheet" href="../bootstrapicons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <!--  备用cdn  -->
+
+    <!-- 新 Bootstrap5 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+
     <!--  popper.min.js 用于弹窗、提示、下拉菜单 -->
     <script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 
-    <script src="../js/axios.min.js"></script>
+    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
 
     <!--  和风天气  -->
     <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
-
-    <script src="../js/echarts.js"></script>
-
-    <script src="../js/jquery-3.5.1.js"></script>
 
     <style>
         #mainpart{
@@ -39,20 +46,19 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="#">
             小山屋论坛</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-
             </ul>
 
         </div>
         <div class="nav-item dropdown d-flex">
             <a class="nav-link link-light dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${adminname}">
+               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${admin.getAdminname()}">
                 用户
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -71,7 +77,7 @@
         <div class="col-3">
             <h3>论坛管理</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
+                <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/ind/adminindex'">
                     <span class="bi-bar-chart"></span>   今日论坛数据
                 </button>
@@ -93,8 +99,8 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
-                <button type="button" class="list-group-item list-group-item-action"
-                        onclick="window.location.href='http://localhost:8080/adm/mnghot'">
+                <button type="button" class="list-group-item list-group-item-action active"
+                        onclick="window.location.href='http://localhost:8080/adm/mnghot'">>
                     <span class="bi-activity"></span>   热度</button>
             </div>
             <h3>其他</h3>
@@ -102,39 +108,25 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
-                <button type="button" class="list-group-item list-group-item-action"
-                        onclick="window.location.href='http://localhost:8080/adm/allreports'">
+                <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-emoji-frown"></span>   举报管理</button>
             </div>
         </div>
         <div class="col-9">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1><span class="bi-bar-chart"></span>   今日论坛数据</h1>
+                    <h1><span class="bi-activity"></span>   热度</h1>
                 </div>
             </div>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active">论坛数据</a>
+                    <a class="nav-link active">热度管理</a>
                 </li>
             </ul>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <div id="articlechart" style="width: 600px;height:400px;"></div>
-                    <input type="hidden" th:value="${arProg}" id="arprog">
-                    <input type="hidden" th:value="${arJob}" id="arjob">
-                    <input type="hidden" th:value="${arAni}" id="arani">
-                    <input type="hidden" th:value="${arGam}" id="argam">
-                    <input type="hidden" th:value="${arLit}" id="arlit">
-                </div>
-                <div class="col-sm-4">
-                    <div id="userchart" style="width: 600px;height:400px;"></div>
-                    <input type="hidden" th:value="${malec}" id="malec">
-                    <input type="hidden" th:value="${femalec}" id="femalec">
-                    <input type="hidden" th:value="${specc}" id="specc">
-                </div>
-            </div>
+            <button type="button" class="btn btn-info"
+                    onclick="window.location.href='http://localhost:8080/adm/refreshhot'">
+                刷新帖子与评论热度
+            </button>
         </div>
     </div>
 </div>
@@ -149,58 +141,3 @@
 </footer>
 </body>
 </html>
-<script type="text/javascript">
-    // 基于准备好的dom，初始化echarts实例
-    var articleChart = echarts.init(document.getElementById('articlechart'));
-
-    var arprogv=$("#arprog").val();
-    var arjobv=$("#arjob").val();
-    var araniv=$("#arani").val();
-    var argamv=$("#argam").val();
-    var arlitv=$("#arlit").val();
-
-    // 指定图表的配置项和数据
-    var articleoption = {
-        series : [
-            {
-                name: '主题',
-                type: 'pie',
-                data:[
-                    {value:arprogv, name:'编程'},
-                    {value:arjobv, name:'求职招聘'},
-                    {value:araniv, name:'动漫'},
-                    {value:argamv, name:'游戏'},
-                    {value:arlitv, name:'文学'},
-                ],
-                radius: ['40%', '70%']
-            }
-        ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    articleChart.setOption(articleoption);
-</script>
-<script type="text/javascript">
-    var userChart = echarts.init(document.getElementById('userchart'));
-
-    var arca=$("#malec").val();
-    var cmcc=$("#femalec").val();
-    var dcd=$("#specc").val();
-
-    var allSendOption = {
-        series: [
-            {
-                name: '用户性别',
-                type: 'pie',
-                data:[
-                    {value:arca, name:'男性'},
-                    {value:cmcc, name:'女性'},
-                    {value:dcd, name:'非二元性别者'}
-                ],
-                radius: ['40%', '70%']
-            }
-        ]
-    };
-
-    userChart.setOption(allSendOption)
-</script>
